# pythonProject

./: .gitignore  dev-requirements.txt  noxfile.py  pyproject.toml
python_module/: bucket_get.py  main.py  sql.py  train_ex.csv
